--- a/ProjectX_Proto1/ProductMan.xaml
+++ b/ProjectX_Proto1/ProductMan.xaml
@@ -91,7 +91,37 @@
                     <Button Style="{DynamicResource MenuButton}" Content="Purchase History" Grid.Row="1"/>
                     <Button Style="{DynamicResource MenuButton}" Content="Vendors"></Button>
                     <Button Style="{DynamicResource MenuButton}" Content="Items &amp; Prices"></Button>
-                    <TextBlock></TextBlock>
+                    <TextBlock Width="223" Grid.Row="4"></TextBlock>
+                    <Border Grid.Row="5" BorderThickness="1,3,1,1" BorderBrush="{DynamicResource ProfileHighlight}" Padding="4,2,4,2" Margin="2,2,2,2">
+                        <StackPanel Orientation="Vertical">
+                            <Grid>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition/>
+                                    <ColumnDefinition Width="1"/>
+                                    <ColumnDefinition/>
+                                </Grid.ColumnDefinitions>
+                                <StackPanel Grid.Column="0" HorizontalAlignment="Left" Orientation="Horizontal" Style="{DynamicResource HeaderControls}" ToolTip="Click to open notification center">
+                                    <Label Style="{DynamicResource Header1}" Content="" FontFamily="Segoe UI Symbol" FontSize="14" VerticalAlignment="Center" Margin="0,-6,0,0"></Label>
+                                    <Label Style="{DynamicResource Header1}" Content="Alerts &amp; Notifications" VerticalAlignment="Center" FontSize="15"></Label>
+                                </StackPanel>
+                                <StackPanel Grid.Column="2" HorizontalAlignment="Right" Orientation="Horizontal" Style="{DynamicResource HeaderControls}" ToolTip="Clear all notifications">
+                                    <Label Style="{DynamicResource Header1}" Content="" FontFamily="Segoe UI Symbol" FontSize="28" VerticalAlignment="Center" Margin="-5,-8,-5,-5"></Label>
+                                </StackPanel>
+                            </Grid>                            
+                            <StackPanel Height="1" Background="{DynamicResource WindowAccentBrush}"></StackPanel>
+                            <StackPanel>
+                                <ListView>
+                                    <ListViewItem Content="> Low stock on Item 1"></ListViewItem>
+                                    <ListViewItem Content="> Low stock on Item 1"></ListViewItem>
+                                    <ListViewItem Content="> Low stock on Item 1"></ListViewItem>
+                                    <ListViewItem Content="> Low stock on Item 1"></ListViewItem>
+                                    <ListViewItem Content="> Dead stock on Item 1"></ListViewItem>
+                                    <ListViewItem Content="> Dead stock on Item 1"></ListViewItem>
+                                    <ListViewItem Content=">> More alerts..."></ListViewItem>
+                                </ListView>
+                            </StackPanel>
+                        </StackPanel>                    
+                    </Border>                    
                     <!--Split the second part of the panel to show the stock information-->
                 </StackPanel>
                 <StackPanel Grid.Column="2" Background="WhiteSmoke">
