--- a/ProjectX_Proto1/Themes/MasterTheme.xaml
+++ b/ProjectX_Proto1/Themes/MasterTheme.xaml
@@ -88,13 +88,18 @@
         <Setter Property="FontFamily" Value="Segoe UI Light"></Setter>
         <Setter Property="FontSize" Value="20"></Setter>
     </Style>
+    <Style x:Key="HeaderIcons" TargetType="{x:Type Label}">
+        <Setter Property="Foreground" Value="{DynamicResource Header1Brush}"></Setter>
+        <Setter Property="FontFamily" Value="pack://application:,,,/Resources/#FontAwesome"/>
+        <Setter Property="FontSize" Value="20"></Setter>
+    </Style>
     <Style TargetType="{x:Type TextBox}">
         <Setter Property="Foreground" Value="{DynamicResource DefaultTextBrush}"></Setter>
         <Setter Property="Background" Value="{DynamicResource WindowBackgroundBrush}"></Setter>
         <Setter Property="FontFamily" Value="Segoe UI Light"></Setter>
         <Setter Property="FontSize" Value="14"></Setter>
     </Style>
-    <Style TargetType="Button" x:Key="FlatButton">
+    <Style TargetType="{x:Type Button}" x:Key="FlatButton">
         <Setter Property="Background" Value="{DynamicResource WindowBackgroundBrush}"/>
         <Setter Property="Foreground" Value="{DynamicResource Header1Brush}"/>
         <Setter Property="FontFamily" Value="Segoe UI Light"/>
@@ -102,8 +107,9 @@
         <Setter Property="BorderThickness" Value="1"/>
         <Setter Property="BorderBrush" Value="{DynamicResource WindowBackgroundBrush}"/>
     </Style>
-    <Style TargetType="Button" x:Key="MenuButton">
+    <Style TargetType="{x:Type Button}" x:Key="MenuButton" BasedOn="{x:Null}">
         <Setter Property="Background" Value="{DynamicResource WindowBackgroundBrush}"/>
+        <Setter Property="FocusVisualStyle" Value="{DynamicResource HoverAccentBrush}"/>
         <Setter Property="Foreground" Value="{DynamicResource Header1Brush}"/>
         <Setter Property="FontFamily" Value="Segoe UI Light"/>
         <Setter Property="FontSize" Value="16"></Setter>
