--- a/ProjectX_Proto1/ProductMan.xaml
+++ b/ProjectX_Proto1/ProductMan.xaml
@@ -57,7 +57,7 @@
                     <Label Style="{DynamicResource Header1}" Content="New" VerticalAlignment="Center" FontSize="16"/>
                 </StackPanel>
                 <StackPanel Grid.Column="6" HorizontalAlignment="Stretch"/>
-                <StackPanel Grid.Column="7" Orientation="Horizontal" x:Name="pnlSettings" Style="{DynamicResource HeaderControls}"  Margin="0,0,-2,0">
+                <StackPanel Grid.Column="7" Orientation="Horizontal" x:Name="pnlSettings" Style="{DynamicResource HeaderControls}"  Margin="0,0,-2,0" MouseLeftButtonUp="pnlSettings_MouseLeftButtonUp">
                     <Label Style="{DynamicResource HeaderIcons}" Content="&#xF013;" FontSize="20" VerticalAlignment="Center"/>
                 </StackPanel>
                 <ToggleButton Grid.Column="8" Grid.Row="0" Style="{DynamicResource HeaderToggleControls}" x:Name="tglProfile" Click="tglProfile_Click">
@@ -70,9 +70,6 @@
                         </StackPanel>
                     </ToggleButton.Content>
                 </ToggleButton>
-                <StackPanel Grid.Column="8" Orientation="Horizontal" HorizontalAlignment="Right" x:Name="pnlProfile" Style="{DynamicResource HeaderControls}" MouseLeftButtonUp="pnlProfile_Click">
-                    
-                </StackPanel>
             </Grid>
         </StackPanel>
         <StackPanel Grid.Row="1" Background="{DynamicResource ProfileHighlight}" Panel.ZIndex="1">
@@ -121,7 +118,41 @@
                             </Grid>
                         </Grid>
                     </Border>
-                   
+                </Canvas>
+                <!--Theme selection dropdown from Settings menu bar button-->
+                <Canvas Panel.ZIndex="2" HorizontalAlignment="Stretch" Grid.Column="2" x:Name="canvasSettings" Visibility="Visible">
+                    <Border BorderThickness="2,0,2,2" BorderBrush="{DynamicResource WindowAccentBrush}" Canvas.Left="-275" Width="131" Height="250" Canvas.Top="1">
+                        <Grid Background="{DynamicResource FieldBackgroundBrush}">
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="5"/>
+                                <RowDefinition/>
+                                <RowDefinition/>
+                                <RowDefinition/>
+                                <RowDefinition/>
+                                <RowDefinition/>
+                                <RowDefinition/>
+                                <RowDefinition/>
+                                <RowDefinition Height="5"/>
+                            </Grid.RowDefinitions>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="5"/>
+                                <ColumnDefinition/>
+                                <ColumnDefinition Width="5"/>
+                            </Grid.ColumnDefinitions>
+                            <StackPanel Grid.Column="1" Grid.Row="1" Height="30" VerticalAlignment="Top">
+                                <Border Background="#FF1C3E3C" BorderBrush="Black" BorderThickness="1" Height="30"></Border>
+                            </StackPanel>
+                            <StackPanel Grid.Column="1" Grid.Row="2" Height="30" VerticalAlignment="Top">
+                                <Border Background="#FF401530" BorderBrush="Black" BorderThickness="1" Height="30"></Border>
+                            </StackPanel>
+                            <StackPanel Grid.Column="1" Grid.Row="3" Height="30" VerticalAlignment="Top">
+                                <Border Background="#FF394F38" BorderBrush="Black" BorderThickness="1" Height="30"></Border>
+                            </StackPanel>
+                            <StackPanel Grid.Column="1" Grid.Row="4" Height="30" VerticalAlignment="Top">
+                                <Border Background="#FF462D26" BorderBrush="Black" BorderThickness="1" Height="30"></Border>
+                            </StackPanel>
+                        </Grid>
+                    </Border>
                 </Canvas>
             </Grid>
         </StackPanel>
@@ -144,23 +175,20 @@
                         </Grid.RowDefinitions>
                     </Grid>
                     <TextBlock Width="225" Grid.Row="0"/>
-                    <Button Style="{DynamicResource MenuButton}" Content="Purchase History" Grid.Row="1"/>
-                    <Button Style="{DynamicResource MenuButton}" Content="Vendors" Grid.Row="2"/>
-                    <Button Style="{DynamicResource MenuButton}" Content="Items &amp; Prices" Grid.Row="3"/>
+                    <Button Style="{DynamicResource FlatButtonControl}" Content="Purchase History" Grid.Row="1" Height="40" x:Name="btnPurchaseHistory" Click="btnPurchaseHistory_Click"/>
+                    <Button Style="{DynamicResource FlatButtonControl}" Content="Vendors" Grid.Row="2" Height="40" x:Name="btnVendors" Click="btnVendors_Click"/>
+                    <Button Style="{DynamicResource FlatButtonControl}" Content="Items &amp; Prices" Grid.Row="3" Height="40" x:Name="btnItemsPrices" Click="btnItemsPrices_Click"/>
                     <TextBlock Width="223" Grid.Row="4"/>
-                    <Border Grid.Row="5" BorderThickness="1,3,1,1" BorderBrush="{DynamicResource ProfileHighlight}" Padding="4,2,4,2" Margin="2,2,2,2">
+                    <Border Grid.Row="5" BorderThickness="1,4,1,1" BorderBrush="{DynamicResource ProfileHighlight}" Padding="1,1,1,1" Margin="2,2,2,2">
                         <StackPanel Orientation="Vertical">
                             <Grid>
                                 <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="176"/>
+                                    <ColumnDefinition Width="192"/>
                                     <ColumnDefinition Width="1"/>
                                     <ColumnDefinition/>
                                 </Grid.ColumnDefinitions>
-                                <StackPanel Grid.Column="0" HorizontalAlignment="Left" Orientation="Horizontal" Style="{DynamicResource HeaderControls}" ToolTip="Click to open notification center">
+                                <StackPanel Grid.Column="0" HorizontalAlignment="Stretch" Orientation="Horizontal" Style="{DynamicResource HeaderControls}" ToolTip="Click to open notification center">
                                     <Label Style="{DynamicResource HeaderIcons}" Content="&#xF075;" FontSize="16" VerticalAlignment="Center" Margin="0,-2,0,0">
-                                        <Label.DataContext>
-                                            <Properties:Resources/>
-                                        </Label.DataContext>
                                     </Label>
                                     <Label Style="{DynamicResource Header1}" Content="Alerts &amp; Notifications" VerticalAlignment="Center" FontSize="15" Margin="0,0,8,0"/>
                                 </StackPanel>
@@ -170,15 +198,17 @@
                             </Grid>
                             <StackPanel Height="1" Background="{DynamicResource WindowAccentBrush}"/>
                             <StackPanel>
-                                <ListView>
-                                    <ListViewItem Content="&gt; Low stock on Item 1"/>
-                                    <ListViewItem Content="&gt; Low stock on Item 1"/>
-                                    <ListViewItem Content="&gt; Low stock on Item 1"/>
-                                    <ListViewItem Content="&gt; Low stock on Item 1"/>
-                                    <ListViewItem Content="&gt; Dead stock on Item 1"/>
-                                    <ListViewItem Content="&gt; Dead stock on Item 1"/>
-                                    <ListViewItem Content="&gt;&gt; More alerts..."/>
-                                </ListView>
+                                <ScrollViewer>
+                                    <ListView>
+                                        <ListViewItem Content="&gt; Low stock on Item 1"/>
+                                        <ListViewItem Content="&gt; Low stock on Item 1"/>
+                                        <ListViewItem Content="&gt; Low stock on Item 1"/>
+                                        <ListViewItem Content="&gt; Low stock on Item 1"/>
+                                        <ListViewItem Content="&gt; Dead stock on Item 1"/>
+                                        <ListViewItem Content="&gt; Dead stock on Item 1"/>
+                                        <ListViewItem Content="&gt;&gt; More alerts..."/>
+                                    </ListView>
+                                </ScrollViewer>                                
                             </StackPanel>
                         </StackPanel>
                     </Border>
